<resources>
    <string name="app_name">Rian Thai</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="loginhere">loginhere</string>
    <string name="login">login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="log_in">Log In</string>
    <string name="forget_your_password">Forget your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="btn_login">Login</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home">Home</string>
    <string name="welcome_back">Welcome back!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bar_chart">BarChartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back">back</string>
</resources>